package edu.hitsz.aircraft;

public interface Observer {
    public void update();
}
